# ChangeLog for media-sound/supercollider
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Apr 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  supercollider-3.6.3.ebuild, supercollider-9999.ebuild:
  Require qtgui to be built with the gtkstyle flag if IDE is to be built. 
  Thanks to Manuel Baerenz for reporting the issue.

*supercollider-9999 (20 Apr 2013)

  20 Apr 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  supercollider-3.6.3.ebuild, +supercollider-9999.ebuild,
  -supercollider-99999999.ebuild:
  Re-version live ebuild to 9999 instead of 99999999.
  Fix issue when multilib strict is set. Thanks to Gavin Pryke for testing the
  ebuild.

*supercollider-3.6.3 (19 Apr 2013)

  19 Apr 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  -files/70scel-gentoo.el, -supercollider-3.3.1.ebuild,
  -supercollider-3.4.3.ebuild, +supercollider-3.6.3.ebuild,
  supercollider-99999999.ebuild, +files/README.gentoo,
  -files/README-gentoo.txt, metadata.xml:
  Version bump and remove old ebuilds.
  Move to EAPI 5.
  Move to new build system; CMake.
  Remove the special elisp file.
  Add and remove USE flags and their descriptions.
  Remove no-herd from metadata.
  Rename and update the README-gentoo.txt (new name README.gentoo).
  Depend on virtual/pkgconfig.
  Thanks to turion for reporting this bug so that these deprecations could 
  be spotted. Closes #0000162.

*supercollider-3.4.3 (15 Jun 2011)

  15 Jun 2011; <willy@gentoo.org> +supercollider-3.4.3.ebuild, metadata.xml:
  Add supercollider 3.4.3

*supercollider-3.3.1 (28 Apr 2010)

  28 Apr 2010; Viktor Lazarev <taurus101v@gmail.com>
  +supercollider-3.3.1.ebuild, supercollider-99999999.ebuild, metadata.xml:
  version bump, repoman payment, remove strange rpath, fix incorrect paths

  26 Apr 2010; Viktor Lazarev <taurus101v@gmail.com>
  supercollider-99999999.ebuild, +metadata.xml:
  Added some dependencies, turned off using of readline
