@@ -1,6 +1,8 @@
 AUX README.gentoo 2443 SHA256 a817a4b6fe4adb0184400f6b8b35b39b0af50378caa56fce603fddeb8deb52ee SHA512 e742739887866a49d5f814860b407f4cc1aba8f19b54de7c4cdaf99c40dd8af4de38c9e76d32f561b830ea772f06d50f7452a72a0c659a1079ff22bc2e85ad4f WHIRLPOOL 2ce1cc3ed5140e21746bf74cf23fc761fbe915adafa34e3d746c3d7544ee4090bd667c1865bdc6f1e7aeee2890f4cae2be6c53853df3d30122f7a768bf8ae2fe
 DIST SuperCollider-3.6.3-Source-linux.tar.bz2 7333680 SHA256 9bec4455d673f9a1ab687229a7246cfe85147ff184727efea7a1abdd32f91aac SHA512 8bd70c1525b1a7cb9cf2a065007f45c479df2eeffa28e92f3265502391ccfd886ad6b72d8fdf5a05e6dce74a77dfee7e8aca6568c997e615d02ca4557b88227f WHIRLPOOL 6ca9a34a588135c69d4f5cffc1569fd26450157055e4f47ce4b8c2e8ebdd8363a11245eff9b0a3e6093aea55d7c6996c0b2b9ea1a946e7c6e5a96cbaa26fb32f
+DIST SuperCollider-3.6.5-Source-linux.tar.bz2 7526940 SHA256 9a77249604ee2300e87472dd9e83d1d34357dd0b2c840d51a0ee1f9e7a7f867b SHA512 fb318a4be3d2954e0160fb62b40d05091a3229a1cd5792c3dfd1288f38ddd8e944ffff7e6e75f588b0a9c47231ad14b0eb1b9b5c828f5afdb4684213ebc4b287 WHIRLPOOL c7e6895c85e6eece8bdcdad06e6d1a4dfb88f23156bd65339458c071076df29055ef5c46907a84be90e0a34ac858d6a9c2846f52766d4245394cb9d098b9b2c9
 EBUILD supercollider-3.6.3.ebuild 3865 SHA256 7869cc85aebcb679b2058e4a4a653a2c7f970e3179a9b2f5021f7abcb7cb383d SHA512 2b0e57a89d6c42565e1e2712167792aff6df43d4be7b0dac30b99b5683bb7b852aa27bb8c242bb73a5e84a307dbc2f9751c5879aa38f48b7da43f6b9259e46bd WHIRLPOOL e996cf47423cc72777b65c0956e5dfec5d472009ee021456fc0209709ac4ca302a800ad6a6b7343e9bdc210ecfc1234eb4943d90a1569baa731f13b4b2b21940
-EBUILD supercollider-9999.ebuild 3755 SHA256 74f74434c7e0ae306e0da0904ad6ab6303fcfda52ea22d7c7cc47379aede5265 SHA512 a323dc5ae448bbd2ed572ceb51ac32a48ad21207f14df22f2b771a9ce39f01e9660164e64fbf6d001f32639b567cbd7362d054b3143bb43e08a9d4afc084e4da WHIRLPOOL 83ef71f9d2242df0a21aa4a744f07d28c5188a187a5990141f8b72ff5b3939223667fd4e1d5fae7e704468af1fab7138ef3b588bf60ba389fffca2fd91903953
-MISC ChangeLog 2088 SHA256 14ba3dd4ed7f739604d0ccfcf89d756fb7393e6771bf8cf8c7210082d9f7d5b2 SHA512 8e4128cbade98fe03c276a8b2ea48c1e7cc311655fb0e7f308eefa1b6d25dc9fbaf96629d4e73376c55b17b59b800340721dc081c8ce05ad88951e35f4693593 WHIRLPOOL 89aec10e1f124706dedc878d883662e455239c532836b653cedd5a3b1c86c68a29087fddff2997e3bcd714d879b202b13b74dab8756785ae33ca62e23517086b
+EBUILD supercollider-3.6.5.ebuild 3865 SHA256 7869cc85aebcb679b2058e4a4a653a2c7f970e3179a9b2f5021f7abcb7cb383d SHA512 2b0e57a89d6c42565e1e2712167792aff6df43d4be7b0dac30b99b5683bb7b852aa27bb8c242bb73a5e84a307dbc2f9751c5879aa38f48b7da43f6b9259e46bd WHIRLPOOL e996cf47423cc72777b65c0956e5dfec5d472009ee021456fc0209709ac4ca302a800ad6a6b7343e9bdc210ecfc1234eb4943d90a1569baa731f13b4b2b21940
+EBUILD supercollider-9999.ebuild 3748 SHA256 20c86c708a2ada850143b961a39f755e0aa731be17df846534dd6ce21c9a725b SHA512 35f7ceb5fcfec1489d639e91bcdb1a82fe24c5f3bf2f589970f9bd6293ab70f1963796e03f4f067f2ad1fd866fbb0c73c198c14af91f4935161d844c0cfa9646 WHIRLPOOL 9982a520a965e1284caae0bcce6fc8d7c0963f8e25ede3b4fa6026cd7babe5c62bdd86203cae3bd728c606cb5821083aeb1c2c8d7f6205688aee223c91b7dbca
+MISC ChangeLog 2303 SHA256 107a35d904c782be9d41fce7fc9706e79a718a6bccc88fd92377e1a53ada7f2f SHA512 72033de6c0bb71d753b2463277a955fee7914ba63cfb2334204b461006a647ab6da576bcb2308527244a3f0ee575d47d98d3860244430abeef83627d30493aaf WHIRLPOOL adb6b5f7fa3a36dfa0bcc35c5bb560d71d59eeb4af582b92576a0bda078ba869709db897cadf913c0e4189d1ae99c17d4558260122cca05029a2510326b2a644
 MISC metadata.xml 931 SHA256 adf9c574616ffcf93a1a39baccc67568243923daae19ea57db3e0d5dab2e890e SHA512 857a7454377edc2cdaa6be55a5bd94ef5acc43a7db1f99d1713500b178447a53504fc22997cf8beccf87360821ca8937d280603219c92c2922599fcafcd0c69e WHIRLPOOL c8513cf14875acd12f3bfe8c47e87b041013365000f575cbe1bb66c4be1dfcfdc671a2583ba64caab6ca26cc81acf553db7c7136eecffae3fba7ed36d2726592
